# Simple-Ray-Tracer

./: CMakeLists.txt  Doxyfile  README.md
examples/: basic_world2.cpp  basic_world_patterns.cpp  basic_world_reflection.cpp  basic_world_threaded.cpp  cone_ice_cream.cpp  csg_pacman.cpp  cube_of_cubes.cpp  cubes.cpp  cylinders.cpp  hexagon.cpp  reflection_and_refraction.cpp  soft_shadow_demo.cpp  teapot_obj.cpp
include/: camera.hpp  canvas.hpp  color.hpp  csg.hpp  geo.hpp  light.hpp  material.hpp  matrix.hpp  noise.hpp  parser.hpp  pattern.hpp  ray.hpp  tuple.hpp  world.hpp
src/: camera.cpp  canvas.cpp  color.cpp  csg.cpp  geo.cpp  light.cpp  material.cpp  matrix.cpp  parser.cpp  pattern.cpp  ray.cpp  tuple.cpp  world.cpp
tests/: tests_camera.cpp  tests_canvas.cpp  tests_color.cpp  tests_csg.cpp  tests_geo.cpp  tests_light.cpp  tests_material.cpp  tests_matrix.cpp  tests_parser.cpp  tests_pattern.cpp  tests_ray.cpp  tests_tuple.cpp  tests_world.cpp
